--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./review.html" class="sidebar-item-text sidebar-link">
+  <a href="./flashcards.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">5.檢定複習</span></a>
   </div>
 </li>
