--- a/otherME.html
+++ b/otherME.html
@@ -31,7 +31,7 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-search/fuse.min.js"></script>
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
-<link href="./review.html" rel="next">
+<link href="./flashcards.html" rel="next">
 <link href="./equipment.html" rel="prev">
 <script src="site_libs/quarto-html/quarto.js" type="module"></script>
 <script src="site_libs/quarto-html/tabsets/tabsets.js" type="module"></script>
@@ -159,7 +159,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./review.html" class="sidebar-item-text sidebar-link">
+  <a href="./flashcards.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">5.檢定複習</span></a>
   </div>
 </li>
@@ -244,24 +244,7 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="非危險性機械設備" class="level2">
 <h2 class="anchored" data-anchor-id="非危險性機械設備">4. 非危險性機械\設備</h2>
-<div class="tabset-margin-container"></div><div class="panel-tabset border">
-<ul class="nav nav-tabs" role="tablist"></ul>
-<div class="tab-content border">
-
-</div>
-</div>
-<div class="tabset-margin-container"></div><div class="panel-tabset border">
-<ul class="nav nav-tabs" role="tablist"></ul>
-<div class="tab-content border">
-
-</div>
-</div>
-<div class="tabset-margin-container"></div><div class="panel-tabset border">
-<ul class="nav nav-tabs" role="tablist"></ul>
-<div class="tab-content border">
-
-</div>
-</div>
+<p>建構中</p>
 
 
 </section>
@@ -678,7 +661,7 @@ ul.task-list li input[type="checkbox"] {
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="./review.html" class="pagination-link" aria-label="5.檢定複習">
+      <a href="./flashcards.html" class="pagination-link" aria-label="5.檢定複習">
         <span class="nav-page-text">5.檢定複習</span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
