--- a/machine.html
+++ b/machine.html
@@ -159,7 +159,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./review.html" class="sidebar-item-text sidebar-link">
+  <a href="./flashcards.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">5.檢定複習</span></a>
   </div>
 </li>
@@ -267,9 +267,9 @@ ul.task-list li input[type="checkbox"] {
 <h4 class="striped hover anchored" data-anchor-id="起重機具安全試驗">起重機具安全試驗</h4>
 <table class="caption-top table">
 <colgroup>
-<col style="width: 23%">
 <col style="width: 33%">
-<col style="width: 43%">
+<col style="width: 33%">
+<col style="width: 33%">
 </colgroup>
 <tbody>
 <tr class="odd">
@@ -430,9 +430,9 @@ ul.task-list li input[type="checkbox"] {
 <h4 class="anchored" data-anchor-id="危險性機械-hazardous-machines">危險性機械 (Hazardous Machines)</h4>
 <table class="caption-top table">
 <colgroup>
-<col style="width: 24%">
-<col style="width: 41%">
-<col style="width: 34%">
+<col style="width: 33%">
+<col style="width: 33%">
+<col style="width: 33%">
 </colgroup>
 <thead>
 <tr class="header">
